# ddt_ros2_control

./: .gitignore  README.md
controller/rl_controller/: CMakeLists.txt
controller/rl_controller/config/d1h/: controllers.yaml  d1h_amp_flat1_2w.onnx  d1h_amp_flat_2w.onnx  d1h_flat_tita_rl.onnx  model_amp_flat_3w.onnx  model_flat_3w.onnx
controller/rl_controller/config/d1h/amp35_final_test/: amp_model_1w.onnx  amp_model_1w2.onnx  amp_model_1w3.onnx  amp_model_1w6.onnx  amp_model_2w.onnx  amp_model_6k.onnx  amp_model_8k.onnx  amp_ppo_model_1k8.onnx  amp_ppo_model_1w.onnx  amp_ppo_model_1w4.onnx  model_1w4_lin_ang.onnx  model_1w6_reset10.onnx  model_2w.onnx  model_2w2_lin_ang.onnx  model_3w.onnx  np3o_baseline_model_1w.onnx  ppo_baseline_model_1w.onnx  wamp_ppo_model_4k.onnx
controller/rl_controller/config/d1h/amp40_final_test/: amp_h35_model_1w.onnx  amp_ppo_t25_model_1w.onnx  amp_ppo_t25_tau_model_2w.onnx  baseline_h35_p40_model_3w.onnx  baseline_h40_t25_model_2w9.onnx  wamp_model_1w.onnx  wamp_t25_model_1w.onnx  wamp_t25_tau_model_1w6.onnx  wamp_t40_model_8k.onnx  wamp_t40_tau_model_2w.onnx  wamp_t40_tau_model_8k.onnx
controller/rl_controller/config/d1h/amp_final_test/: amp_ppo_model_2w1.onnx  model_2w4_min.onnx  model_2w4_min_lin.onnx  model_6k_reset05.onnx  wamp_model_1w2.onnx
controller/rl_controller/include/rl_controller/common/: RobotParameters.h
controller/rl_controller/launch/: sim_webots.launch.py
controller/rl_controller/src/: rl_controller_node.cpp
controller/rl_controller/src/fsm/: FSMState_RL.cpp
controller/rl_controller/src/inferrer/: onnx_inferrer.cpp
interaction/interaction_data_recorder/: README.md  package.xml  setup.cfg  setup.py
interaction/interaction_data_recorder/config/: recorder_params.yaml  sequence_example.yaml
interaction/interaction_data_recorder/interaction_data_recorder/: __init__.py  recorder_node.py
interaction/interaction_data_recorder/launch/: recorder.launch.py
simulation/webots_bridge/: CMakeLists.txt  package.xml
simulation/webots_bridge/scripts/: ros2_supervisor_with_height.py
simulation/webots_bridge/worlds/: empty_world.wbt  stairs.wbt  terrain.wbt  uneven.wbt
urdfs/d1_description/: CMakeLists.txt
